--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -47,10 +47,12 @@ h2 {
 }
 
 h3 {
+  margin-left: 100px;
+  margin-right: 100px;
   font-weight: 300;
   font-size: 3rem;
   text-align: center;
-  border-bottom: dashed 2px #CCCCCC;
+  border-bottom: solid 4px #CCCCCC;
   padding-bottom: 10px;
   margin-bottom:40px;
 
@@ -66,7 +68,7 @@ h4 {
 }
 
 p, ul {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   text-align: justify;
 }
 
