--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Roboto, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size: 1rem;
   line-height: 1.2;
   margin: 0 0 0.75rem;
