--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,32 @@
 <div class="container projects-container">
-  <h3>{{ site.projects_title | default: "Projects" }}</h3>
-  {% for project in site.data.projects %}
+  <h3>{{ site.projects_title | default: "Skills" }}</h3>
+  <div class="container" style="width: 75%">
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">React / Redux / Storybook</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Node</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 92%" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">Typescript</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">TDD</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 93%" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100">Serverless</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">AWS/Lambda</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 93%" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100">REST / API</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">GraphQL</div>
+  </div>
+  </div>
+  <!-- {% for project in site.data.projects %}
     {% include {{ project.layout | default: 'left' | append: ".html" }} item=project %}
-  {% endfor %}
+  {% endfor %} -->
 </div>
