--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
         {%- include education.html -%}
       {%- endif -%}
 
-      {%- if site.more_content -%}
+      <!-- {%- if site.more_content -%}
         {%- include more.html -%}
-      {%- endif -%}
+      {%- endif -%} -->
 
     </div>
   </main>
