--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,5 +1,5 @@
 <div class="container experience-container">
-  <h3>{{ site.experience_title | default: "Experience" }}</h3>
+  <h3><span>{{ site.experience_title | default: "Experience" }}</span></h3>
   {% for experience in site.data.experience %}
     {% include {{ experience.layout | default: 'left' | append: ".html" }} item=experience %}
   {% endfor %}
