--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,7 @@
 <div class="container projects-container">
-  <h3>{{ site.projects_title | default: "Skills" }}</h3>
+  <h3><span>{{ site.projects_title | default: "Skills" }}</span></h3>
   <div class="container" style="width: 75%">
+    <div class="col-md-6">
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">React / Redux / Storybook</div>
   </div>
@@ -13,17 +14,20 @@
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">TDD</div>
   </div>
+  </div>
+  <div class="col-md-6">
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 93%" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100">Serverless</div>
   </div>
   <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">AWS/Lambda</div>
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">AWS / Lambda</div>
   </div>
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 93%" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100">REST / API</div>
   </div>
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">GraphQL</div>
+  </div>
   </div>
   </div>
   <!-- {% for project in site.data.projects %}
