--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,5 +5,6 @@
     {%- if site.footer_show_references -%}
       &nbsp;- {{ site.references_title }}
     {%- endif -%}
+    &nbsp; &copy; Copyright 2020
   </p>
 </div>
