--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
       <h1>{{ site.name | escape }}</h1>
       <h2>{{ site.title | escape }}</h2>
+      <a type="button" download href="/assets/marclally-github-io.pdf" class="btn btn-dark">Download CV</a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
       <ul class="icons">
