--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -8,13 +8,13 @@
   margin-bottom: 3px;
 }
 
-.header-right a{
-  color:inherit;
-  font-weight:500;
+.header-right a {
+  color: inherit;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 768px) {
-  .header-contianer div{
+  .header-contianer div {
     text-align: center;
   }
 
@@ -42,17 +42,23 @@
   box-shadow: inset 0 0 20px #636161;
 }
 
+.progress {
+  background-color: #cccccc;
+}
+
 .into-text-1 {
   margin-top: 30px;
 }
 
-@media only screen and (max-width : 992px) {
+@media only screen and (max-width: 992px) {
   .into-text-1 {
     margin-top: 20px;
   }
 }
 
-.projects-container, .experience-container, .education-container {
+.projects-container,
+.experience-container,
+.education-container {
   h3 {
     margin-bottom: 0;
   }
@@ -76,10 +82,10 @@
     }
 
     @media screen and (max-width: 768px) {
-      text-align: center!important;
+      text-align: center !important;
 
       p {
-        text-align: center!important;
+        text-align: center !important;
       }
     }
 
@@ -111,7 +117,8 @@
   }
 }
 
-.layout-right, .layout-top-right {
+.layout-right,
+.layout-top-right {
   .details {
     text-align: right;
   }
@@ -138,7 +145,7 @@
 }
 
 .footer-container {
-  margin-top:100px;
+  margin-top: 100px;
 }
 
 .footer-container p {
@@ -160,14 +167,14 @@
 .contact a {
   line-height: 50px;
   margin-left: 30px;
-  color: #BBBBBB;
+  color: #bbbbbb;
   -webkit-transition: color 0.4s ease;
   -moz-transition: color 0.4s ease;
   transition: color 0.4s ease;
 }
 
 .contact a:hover {
-  color: #4C4C4C;
+  color: #4c4c4c;
 }
 
 p.quote {
