--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -14,6 +14,12 @@
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">TDD</div>
   </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">PHP</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Linux</div>
+  </div>
   </div>
   <div class="col-md-6">
   <div class="progress">
@@ -27,6 +33,12 @@
   </div>
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">GraphQL</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">JQuery</div>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Ajax</div>
   </div>
   </div>
   </div>
