--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -15,10 +15,7 @@
     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">TDD</div>
   </div>
   <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">PHP</div>
-  </div>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Linux</div>
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Storybook</div>
   </div>
   </div>
   <div class="col-md-6">
@@ -35,10 +32,7 @@
     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">GraphQL</div>
   </div>
   <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">JQuery</div>
-  </div>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Ajax</div>
+    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">NextJS</div>
   </div>
   </div>
   <!-- {% for project in site.data.projects %}
